plugins {
    id 'java'
    id 'checkstyle'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

checkstyle {
    toolVersion = "10.24.0"
    configFile = rootProject.file('config/checkstyle/checkstyle.xml')
}

group = 'eu.senla'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    implementation("org.testng:testng:7.11.0")
    implementation("org.apache.maven.plugins:maven-surefire-plugin:3.5.3")
    testImplementation("org.slf4j:slf4j-simple:2.0.17")
    checkstyle "com.puppycrawl.tools:checkstyle:${checkstyle.toolVersion}"
    implementation("io.rest-assured:rest-assured:5.5.3")
    implementation("commons-codec:commons-codec:1.18.0")
    implementation("org.projectlombok:lombok:1.18.38")
    annotationProcessor("org.projectlombok:lombok:1.18.38")
    implementation("com.fasterxml.jackson.core:jackson-databind:2.19.0")
    implementation("org.postgresql:postgresql:42.7.6")
}

test {
    useTestNG()
}